--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.3
 bcrypt==3.1.7
 blinker==1.4
 certifi==2020.4.5.1
@@ -5,9 +6,11 @@ cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
 cryptography==2.9.2
+distlib==0.3.0
 dnspython==1.16.0
 dominate==2.5.1
 email-validator==1.0.5
+filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
@@ -15,6 +18,7 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+heroku==0.1.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -23,13 +27,17 @@ MarkupSafe==1.1.1
 newsapi-python==0.2.6
 numpy==1.18.3
 pandas==1.0.3
+pipenv==2018.11.26
 pycparser==2.20
-python-dateutil==2.8.1
+python-dateutil==1.5
 pytz==2019.3
 requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.16
 urllib3==1.25.9
+virtualenv==20.0.20
+virtualenv-clone==0.5.4
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.1
+gunicorn== 19.9.0
