--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jwt==1.0.0
+Mako==1.1.2
 MarkupSafe==1.1.1
 newsapi-python==0.2.6
 numpy==1.18.3
@@ -30,6 +31,8 @@ pandas==1.0.3
 pipenv==2018.11.26
 pycparser==2.20
 python-dateutil==1.5
+alembic==1.4.2
+python-editor==1.0.4
 pytz==2019.3
 requests==2.23.0
 six==1.14.0
@@ -40,4 +43,3 @@ virtualenv-clone==0.5.4
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.1
-gunicorn== 19.9.0
