--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,58 @@
 appdirs==1.4.3
+Babel==2.6.0
 bcrypt==3.1.7
-blinker==1.4
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
-click==7.1.1
-cryptography==2.9.2
+Click==7.0
+cycler==0.10.0
+DateTime==4.3
 distlib==0.3.0
-dnspython==1.16.0
-dominate==2.5.1
-email-validator==1.0.5
+dominate==2.3.5
+et-xmlfile==1.0.1
 filelock==3.0.12
-Flask==1.1.2
+Flask==1.0.2
+Flask-Admin==1.5.3
+Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-heroku==0.1.4
+Flask-Login==0.4.1
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
 idna==2.9
+importlib-metadata==1.6.0
+importlib-resources==1.5.0
 itsdangerous==1.1.0
-Jinja2==2.11.2
-jwt==1.0.0
-Mako==1.1.2
-MarkupSafe==1.1.1
+jdcal==1.4
+Jinja2==2.10
+kiwisolver==1.0.1
+MarkupSafe==1.1.0
+matplotlib==3.0.2
+newsapi==0.1.1
 newsapi-python==0.2.6
-numpy==1.18.3
-pandas==1.0.3
+numpy==1.15.4
+openpyxl==2.5.14
+pandas==0.24.0
 pipenv==2018.11.26
 pycparser==2.20
-python-editor==1.0.4
-pytz==2019.3
+pyparsing==2.3.1
+python-dateutil==2.7.5
+pytz==2018.9
 requests==2.23.0
-six==1.14.0
-SQLAlchemy==1.3.16
+scipy==1.2.0
+seaborn==0.9.0
+six==1.12.0
+speaklater==1.3
+SQLAlchemy==1.3.3
+tushare==1.2.48
 urllib3==1.25.9
 virtualenv==20.0.20
 virtualenv-clone==0.5.4
 visitor==0.1.3
-Werkzeug==1.0.1
-WTForms==2.3.1
+Werkzeug==0.14.1
+WTForms==2.2.1
+xgboost==0.81
+xlrd==1.2.0
+zipp==3.1.0
+zope.interface==4.6.0
+gunicorn== 19.9.0
